# acruise-peakid

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  detect_peaks.py  peak integration SO2 C258.py  peak intergration C258 co2.py  user_code.py
acruiseR/: .Rbuildignore  DESCRIPTION  LICENSE.md  NAMESPACE  README.md
acruiseR/R/: peakid.R
acruiseR/man/: detect_plumes.Rd  identify_background.Rd  integrate_aup_trapz.Rd  plot_background.Rd  plot_plumes.Rd
acruiseR/tests/: testthat.R
acruiseR/tests/testthat/: load_test_data_pandas.py  setup.R  test-detect_plumes.R  test-identify_background.R  test-integrate_aup_trapz.R
acruisepy/: README.md  pyproject.toml  setup.py
acruisepy/acruisepy/: peakid.py
