[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acruisepy"
version = "0.1.1"
dependencies = [
  "numpy",
  "matplotlib",
  "pandas",
  "PyWavelets"
]
authors = [
  { name="Stuart Lacy", email="stuart.lacy@york.ac.uk" },
]
description = "Provides tools for detecting peaks within ACRUISE measurements"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wacl-york/acruise-peakid/acruisepy"
Issues = "https://github.com/wacl-york/acruise-peakid/issues"
